@@ -1,2 +1,3 @@
 <p>/wiki/en/Example1</p>
 <p><a href="/wiki/en/Special:Edit?topic=Template:Localurl:" class="edit" title="Template:Localurl:">Template:Localurl:</a></p>
+<p>{{#invalid:test}}</p>
