@@ -90,3 +90,11 @@
 [[example1]]
 
 [[eXample1]]
+
+[[Invalid<Topic]]
+
+[[Special:RecentChanges]]
+
+[[Special:RecentChanges|Recent Changes]]
+
+[[Special:Test]]
